# nix-daemon-protocol

./: NOTICE  NixProtocol.hs  flake.nix  hello.cabal  hie.yaml  nix-daemon.cabal  treefmt.toml
nix/: hix.nix
src/: HsshOld.hs  Main.hs  NixProtocol.hs  SocketDuplex.hs  Types.hs  Utils.hs  hello.hs
