-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: nix-daemon
version: 1.0.0.2
license: Apache-2.0
license-file: LICENSE
copyright: (c) Input Output Global Ltd.
author: Michael Fellinger
      , Michael Bishop
maintainer: Michael Fellinger <michael.fellinger@iohk.io>
          , Michael Bishop <michael.bishop@iohk.io>
bug-reports: mailto:michael.fellinger@iohk.io
stability: stable
homepage: https://github.com/input-output-hk/nix-daemon-protocol
synopsis: Hello World, an example package
category: Console, Text
cabal-version: >= 1.6
build-type: Simple

Description:
  This is an implementation of the classic "Hello World" program in
  Haskell, as an example of how to create a minimal Haskell
  application using Cabal and Hackage.  Please submit any suggestions and
  improvements.

source-repository head
  type:     git
  location: https://github.com/input-output-hk/nix-daemon-protocol

flag threaded
  default: False

flag hssh-old
  default: True

executable nix-daemon
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: NixProtocol
               , Types
               , Utils
  ghc-options: -Wall
  build-depends: base
               , Cabal
               , async
               , base64-bytestring
               , binary
               , bytestring
               , cereal
               , containers
               , cryptonite
               , data-default
               , formatting
               , ghc
               , memory
               , optparse-applicative
               , process
               , socket
               , stm
               , text
               , transformers
               , transformers-except

  if flag(threaded)
     ghc-options: -threaded

  if flag(hssh-old)
    other-modules: SocketDuplex
                 , HsshOld
    build-depends: hssh
